@@ -81,7 +81,7 @@ grub_probefs_SOURCES = util/i386/pc/grub-probefs.c	\
 grub_emu_DEPENDENCIES = grub_script.tab.c grub_script.tab.h		\
 	grub_modules_init.h
 grub_emu_SOURCES = commands/boot.c commands/cat.c commands/cmp.c	\
-	commands/configfile.c commands/help.c				\
+	commands/configfile.c commands/echo.c commands/help.c		\
 	commands/terminal.c commands/ls.c commands/test.c 		\
 	commands/search.c commands/blocklist.c				\
 	commands/i386/pc/halt.c commands/i386/pc/reboot.c		\
